<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.source.bmicalculator.MainActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical" >

     
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAppearance="?android:attr/textAppearanceLarge" />

      	<EditText
      	    android:id="@+id/txtHeight"
      	    android:layout_width="0dip"
      	    android:layout_height="wrap_content"
      	    android:layout_weight="0.64"
      	    android:ems="10"
      	    android:inputType="number">
       
        </EditText>
        
      	 <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCM"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtWeight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >
        </EditText>
    
         <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtKG"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalc"
        style="@style/calculate"
        android:layout_marginTop="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:text="@string/calculate" />
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	         <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/yourbmi"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	         
	           <TextView
	               android:id="@+id/txtBMIvalue"
	               android:layout_width="210dp"
	               android:layout_height="wrap_content"
	               android:gravity="right"
	               android:text=""
	               android:textAppearance="?android:attr/textAppearanceMedium" />

         </LinearLayout>
         
        <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	         <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/category"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	         
	           <TextView
	               android:id="@+id/txtCategoryValue"
	               android:layout_width="177dp"
	               android:layout_height="wrap_content"
	               android:gravity="right"
	               android:text=""
	               android:textAppearance="?android:attr/textAppearanceMedium" />

         </LinearLayout>
         
    </LinearLayout>
   
</LinearLayout>

